// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBar renders correctly 1`] = `
<vsnackbar-stub tag="div" value="true" top="true" contentclass="" timeout="-1" transition="v-snack-transition" role="status" class="vd-notification-bar grey-darken-80--text">
  <div class="d-flex align-center">
    <vicon-stub color="grey-darken-80" class="vd-notification-icon mr-2">
      M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
    </vicon-stub>

    test

    <!---->
    <!---->
  </div>
</vsnackbar-stub>
`;

exports[`NotificationBar renders correctly with a custom icon 1`] = `
<vsnackbar-stub tag="div" value="true" top="true" contentclass="" timeout="-1" transition="v-snack-transition" role="status" class="vd-notification-bar grey-darken-80--text">
  <div class="d-flex align-center">
    <vicon-stub color="grey-darken-80" class="vd-notification-icon mr-2">
      test-icon
    </vicon-stub>

    test

    <!---->
    <!---->
  </div>
</vsnackbar-stub>
`;
